--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,12 @@
             <scope>system</scope>
             <systemPath>${java.home}/lib/deploy.jar</systemPath>
         </dependency>
+        <!-- WebSocket -->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
