--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <!-- 指定使用的ES版本为启动的ES版本 -->
         <elasticsearch.version>7.9.2</elasticsearch.version>
         <!-- 指定使用的selenium版本：覆盖springboot指定的版本，修复ClassDefFoundError: org/openqa/selenium -->
-        <selenium.version>4.8.1</selenium.version>
+        <selenium.version>4.11.0</selenium.version>
         <!-- 打包跳过测试 -->
         <skipTests>true</skipTests>
     </properties>
@@ -226,7 +226,12 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.3.1</version>
+            <version>5.5.2</version>
+        </dependency>
+        <dependency> <!-- 解决异常：NoClassDefFoundError: org/apache/hc/client5/http/config/ConnectionConfig -->
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
         </dependency>
         <!-- easyexcel -->
         <dependency>
